# edilcloud-back-dn

./: .deploy.production.example  .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  manage.py  pyproject.toml
.github/scripts/: send_actions_failure_email.py
.github/workflows/: ci.yml  deploy-production.yml
docs/: ASSISTANT_ARCHITETTURA_ATTUALE.md  ASSISTANT_RETRIEVAL_ROADMAP.md  DEMO_ASSET_PIN_MANIFEST.md  DEMO_MASTER_SPEC.md  DEMO_SNAPSHOT_WORKFLOW.md  DEMO_TESTER_ROADMAP.md  FRONTEND_COMPATIBILITY_MATRIX.md  GITHUB_ACTIONS_PRODUCTION_SECRETS.md  PERFORMANCE_HISTORY.md  PRODUCTION_ZERO_DOWNTIME.md  ROADMAP_V3.md  SCALABILITY_DEV.md
scripts/: audit_frontend_contract.py  benchmark_search_global.py  bootstrap_local_db.ps1  capture_performance_baseline.py  compare_performance_baselines.py  loadtest_frontend_api.py  loadtest_realtime_ws.py  record_performance_history.py  report_runtime_performance.py  run_performance_checkpoint.py  run_scalability_matrix.py  seed_create_project_smoke.py  seed_feed_smoke.py  seed_loadtest_fixture.py  seed_notifications_realtime_smoke.py  seed_project_detail_core_smoke.py  seed_team_panel_smoke.py  smoke_ai_flows.py  wait_for_services.py
tests/: __init__.py  test_assistant_api.py  test_assistant_eval.py  test_assistant_router.py  test_billing_api.py  test_demo_blueprint_media.py  test_email_delivery.py  test_health.py  test_identity_api.py  test_media_optimizer.py  test_notifications_api.py  test_performance_baseline.py  test_performance_budget.py  test_performance_checkpoint.py  test_performance_history.py  test_performance_matrix.py  test_projects_api.py  test_projects_demo_seed.py  test_realtime_api.py  test_search_api.py  test_search_benchmark.py  test_workspaces_api.py
(+242 files in other folders)
